Interpreter/RiscVParser.py
# Generated from RiscV.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class RiscVParser ( Parser ):

    grammarFileName = "RiscV.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.data'", "'.text'", "'.config'", "'.eqv'", 
                     "','", "'('", "')'", "'pipelined'", "'forwarding'", 
                     "'delayed'", "'split'", "'unaligned'", "'overwritecode'", 
                     "'fullaccess'", "'on'", "'off'", "'exi'", "'exm'", 
                     "'exd'", "'exfp'", "'exfpm'", "'exfpd'", "'memory'", 
                     "'cache'", "'icache'", "'dcache'", "'size'", "'block'", 
                     "'way'", "'write'", "'cbwa'", "'wtnwa'", "'replace'", 
                     "'random'", "'lru'", "'fifo'", "'lfu'", "'adddev'", 
                     "'board'", "'arrows'", "'matrix'", "'keyboard'", "'screen'", 
                     "'bitbusy'", "'bitnewchar'", "'latency'", "'rows'", 
                     "'columns'", "'='", "'pattern'", "'lui'", "'auipc'", 
                     "'jal'", "'jalr'", "'beq'", "'bne'", "'blt'", "'bge'", 
                     "'bltu'", "'bgeu'", "'lb'", "'lh'", "'lw'", "'lbu'", 
                     "'lhu'", "'sb'", "'sh'", "'sw'", "'addi'", "'slti'", 
                     "'sltiu'", "'xori'", "'ori'", "'andi'", "'slli'", "'srli'", 
                     "'srai'", "'add'", "'sub'", "'sll'", "'slt'", "'sltu'", 
                     "'xor'", "'srl'", "'sra'", "'or'", "'and'", "'ecall'", 
                     "'ebreak'", "'mul'", "'mulh'", "'mulhsu'", "'mulhu'", 
                     "'div'", "'divu'", "'rem'", "'remu'", "'la'", "'nop'", 
                     "'li'", "'mv'", "'not'", "'neg'", "'seqz'", "'snez'", 
                     "'sltz'", "'sgtz'", "'beqz'", "'bnez'", "'blez'", "'bgez'", 
                     "'bltz'", "'bgtz'", "'bgt'", "'ble'", "'bgtu'", "'bleu'", 
                     "'j'", "'jr'", "'ret'", "'.word'", "'.half'", "'.byte'", 
                     "'.float'", "'.double'", "'.ascii'", "'.asciiz'", "'.space'" ]

    symbolicNames = [ "<INVALID>", "ZONADATOS", "ZONACODIGO", "ZONACONFIGURACION", 
                      "T_EQV", "COMA", "LPAREN", "RPAREN", "PIPELINED", 
                      "FORWARDING", "DELAYED", "SPLIT", "UNALIGNED", "OVERWRITECODE", 
                      "FULLACCESS", "ON", "OFF", "EXI", "EXM", "EXD", "EXFP", 
                      "EXFPM", "EXFPD", "MEMORY", "CACHE", "ICACHE", "DCACHE", 
                      "SIZE", "BLOCK", "WAY", "WRITE", "CBWA", "WTNWA", 
                      "REPLACE", "RANDOM", "LRU", "FIFO", "LFU", "ADDDEV", 
                      "BOARD", "ARROWS", "MATRIX", "KEYBOARD", "SCREEN", 
                      "BITBUSY", "BITNEWCHAR", "LATENCY", "FILAS", "COLS", 
                      "IGUAL", "PATTERN", "LUI", "AUIPC", "JAL", "JALR", 
                      "BEQ", "BNE", "BLT", "BGE", "BLTU", "BGEU", "LB", 
                      "LH", "LW", "LBU", "LHU", "SB", "SH", "SW", "ADDI", 
                      "SLTI", "SLTIU", "XORI", "ORI", "ANDI", "SLLI", "SRLI", 
                      "SRAI", "ADD", "SUB", "SLL", "SLT", "SLTU", "XOR", 
                      "SRL", "SRA", "OR", "AND", "ECALL", "EBREAK", "MUL", 
                      "MULH", "MULHSU", "MULHU", "DIV", "DIVU", "REM", "REMU", 
                      "LA", "NOP", "LI", "MV", "NOT", "NEG", "SEQZ", "SNEZ", 
                      "SLTZ", "SGTZ", "BEQZ", "BNEZ", "BLEZ", "BGEZ", "BLTZ", 
                      "BGTZ", "BGT", "BLE", "BGTU", "BLEU", "J", "JR", "RET", 
                      "T_WORD", "T_HALF", "T_BYTE", "T_FLOAT", "T_DOUBLE", 
                      "T_ASCII", "T_ASCIIZ", "T_SPACE", "CADENA", "COMENTARIO", 
                      "ESPACIOS", "NUEVALINEA", "PATRONBITS", "REG_FP", 
                      "REG_FP_NAME", "REG_INT", "REG_INT_NAME", "NUMERO_INT", 
                      "NUMERO_FP", "ETIQUETA", "IDENT", "CARACTERROR" ]

    RULE_prog = 0
    RULE_finlinea = 1
    RULE_bloquedatos = 2
    RULE_lineadatos = 3
    RULE_declaracion = 4
    RULE_bloquecodigo = 5
    RULE_lineacodigo = 6
    RULE_reg_int = 7
    RULE_inm_int = 8
    RULE_parEtiq = 9
    RULE_instruccion = 10

    ruleNames =  [ "prog", "finlinea", "bloquedatos", "lineadatos", "declaracion", 
                   "bloquecodigo", "lineacodigo", "reg_int", "inm_int", 
                   "parEtiq", "instruccion" ]

    EOF = Token.EOF
    ZONADATOS=1
    ZONACODIGO=2
    ZONACONFIGURACION=3
    T_EQV=4
    COMA=5
    LPAREN=6
    RPAREN=7
    PIPELINED=8
    FORWARDING=9
    DELAYED=10
    SPLIT=11
    UNALIGNED=12
    OVERWRITECODE=13
    FULLACCESS=14
    ON=15
    OFF=16
    EXI=17
    EXM=18
    EXD=19
    EXFP=20
    EXFPM=21
    EXFPD=22
    MEMORY=23
    CACHE=24
    ICACHE=25
    DCACHE=26
    SIZE=27
    BLOCK=28
    WAY=29
    WRITE=30
    CBWA=31
    WTNWA=32
    REPLACE=33
    RANDOM=34
    LRU=35
    FIFO=36
    LFU=37
    ADDDEV=38
    BOARD=39
    ARROWS=40
    MATRIX=41
    KEYBOARD=42
    SCREEN=43
    BITBUSY=44
    BITNEWCHAR=45
    LATENCY=46
    FILAS=47
    COLS=48
    IGUAL=49
    PATTERN=50
    LUI=51
    AUIPC=52
    JAL=53
    JALR=54
    BEQ=55
    BNE=56
    BLT=57
    BGE=58
    BLTU=59
    BGEU=60
    LB=61
    LH=62
    LW=63
    LBU=64
    LHU=65
    SB=66
    SH=67
    SW=68
    ADDI=69
    SLTI=70
    SLTIU=71
    XORI=72
    ORI=73
    ANDI=74
    SLLI=75
    SRLI=76
    SRAI=77
    ADD=78
    SUB=79
    SLL=80
    SLT=81
    SLTU=82
    XOR=83
    SRL=84
    SRA=85
    OR=86
    AND=87
    ECALL=88
    EBREAK=89
    MUL=90
    MULH=91
    MULHSU=92
    MULHU=93
    DIV=94
    DIVU=95
    REM=96
    REMU=97
    LA=98
    NOP=99
    LI=100
    MV=101
    NOT=102
    NEG=103
    SEQZ=104
    SNEZ=105
    SLTZ=106
    SGTZ=107
    BEQZ=108
    BNEZ=109
    BLEZ=110
    BGEZ=111
    BLTZ=112
    BGTZ=113
    BGT=114
    BLE=115
    BGTU=116
    BLEU=117
    J=118
    JR=119
    RET=120
    T_WORD=121
    T_HALF=122
    T_BYTE=123
    T_FLOAT=124
    T_DOUBLE=125
    T_ASCII=126
    T_ASCIIZ=127
    T_SPACE=128
    CADENA=129
    COMENTARIO=130
    ESPACIOS=131
    NUEVALINEA=132
    PATRONBITS=133
    REG_FP=134
    REG_FP_NAME=135
    REG_INT=136
    REG_INT_NAME=137
    NUMERO_INT=138
    NUMERO_FP=139
    ETIQUETA=140
    IDENT=141
    CARACTERROR=142

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RiscVParser.EOF, 0)

        def finlinea(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RiscVParser.FinlineaContext)
            else:
                return self.getTypedRuleContext(RiscVParser.FinlineaContext,i)


        def bloquedatos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RiscVParser.BloquedatosContext)
            else:
                return self.getTypedRuleContext(RiscVParser.BloquedatosContext,i)


        def bloquecodigo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RiscVParser.BloquecodigoContext)
            else:
                return self.getTypedRuleContext(RiscVParser.BloquecodigoContext,i)


        def getRuleIndex(self):
            return RiscVParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = RiscVParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RiscVParser.COMENTARIO or _la==RiscVParser.NUEVALINEA:
                self.state = 22
                self.finlinea()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RiscVParser.ZONADATOS or _la==RiscVParser.ZONACODIGO:
                self.state = 30
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [RiscVParser.ZONADATOS]:
                    self.state = 28
                    self.bloquedatos()
                    pass
                elif token in [RiscVParser.ZONACODIGO]:
                    self.state = 29
                    self.bloquecodigo()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.match(RiscVParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FinlineaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUEVALINEA(self):
            return self.getToken(RiscVParser.NUEVALINEA, 0)

        def COMENTARIO(self):
            return self.getToken(RiscVParser.COMENTARIO, 0)

        def getRuleIndex(self):
            return RiscVParser.RULE_finlinea

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFinlinea" ):
                listener.enterFinlinea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFinlinea" ):
                listener.exitFinlinea(self)




    def finlinea(self):

        localctx = RiscVParser.FinlineaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_finlinea)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            _la = self._input.LA(1)
            if not(_la==RiscVParser.COMENTARIO or _la==RiscVParser.NUEVALINEA):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloquedatosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ZONADATOS(self):
            return self.getToken(RiscVParser.ZONADATOS, 0)

        def finlinea(self):
            return self.getTypedRuleContext(RiscVParser.FinlineaContext,0)


        def lineadatos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RiscVParser.LineadatosContext)
            else:
                return self.getTypedRuleContext(RiscVParser.LineadatosContext,i)


        def getRuleIndex(self):
            return RiscVParser.RULE_bloquedatos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloquedatos" ):
                listener.enterBloquedatos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloquedatos" ):
                listener.exitBloquedatos(self)




    def bloquedatos(self):

        localctx = RiscVParser.BloquedatosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloquedatos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(RiscVParser.ZONADATOS)
            self.state = 40
            self.finlinea()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 121)) & ~0x3f) == 0 and ((1 << (_la - 121)) & ((1 << (RiscVParser.T_WORD - 121)) | (1 << (RiscVParser.T_HALF - 121)) | (1 << (RiscVParser.T_BYTE - 121)) | (1 << (RiscVParser.T_FLOAT - 121)) | (1 << (RiscVParser.T_DOUBLE - 121)) | (1 << (RiscVParser.T_ASCII - 121)) | (1 << (RiscVParser.T_ASCIIZ - 121)) | (1 << (RiscVParser.T_SPACE - 121)) | (1 << (RiscVParser.COMENTARIO - 121)) | (1 << (RiscVParser.NUEVALINEA - 121)) | (1 << (RiscVParser.ETIQUETA - 121)))) != 0):
                self.state = 41
                self.lineadatos()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineadatosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ETIQUETA = None # Token

        def finlinea(self):
            return self.getTypedRuleContext(RiscVParser.FinlineaContext,0)


        def ETIQUETA(self):
            return self.getToken(RiscVParser.ETIQUETA, 0)

        def declaracion(self):
            return self.getTypedRuleContext(RiscVParser.DeclaracionContext,0)


        def getRuleIndex(self):
            return RiscVParser.RULE_lineadatos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineadatos" ):
                listener.enterLineadatos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineadatos" ):
                listener.exitLineadatos(self)




    def lineadatos(self):

        localctx = RiscVParser.LineadatosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lineadatos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RiscVParser.ETIQUETA:
                self.state = 47
                localctx._ETIQUETA = self.match(RiscVParser.ETIQUETA)


            InfoCompil.Program.addTag(localctx._ETIQUETA, "variable");
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 121)) & ~0x3f) == 0 and ((1 << (_la - 121)) & ((1 << (RiscVParser.T_WORD - 121)) | (1 << (RiscVParser.T_HALF - 121)) | (1 << (RiscVParser.T_BYTE - 121)) | (1 << (RiscVParser.T_FLOAT - 121)) | (1 << (RiscVParser.T_DOUBLE - 121)) | (1 << (RiscVParser.T_ASCII - 121)) | (1 << (RiscVParser.T_ASCIIZ - 121)) | (1 << (RiscVParser.T_SPACE - 121)))) != 0):
                self.state = 51
                self.declaracion()


            self.state = 54
            self.finlinea()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tamRes = None # Token
            self.var_int = None # Token
            self._NUMERO_INT = None # Token
            self.vi = list() # of Tokens
            self.var_fp = None # Token
            self._NUMERO_FP = None # Token
            self.vf = list() # of Tokens
            self.var_string = None # Token
            self._CADENA = None # Token
            self.vs = list() # of Tokens

        def T_SPACE(self):
            return self.getToken(RiscVParser.T_SPACE, 0)

        def NUMERO_INT(self, i:int=None):
            if i is None:
                return self.getTokens(RiscVParser.NUMERO_INT)
            else:
                return self.getToken(RiscVParser.NUMERO_INT, i)

        def T_WORD(self):
            return self.getToken(RiscVParser.T_WORD, 0)

        def T_HALF(self):
            return self.getToken(RiscVParser.T_HALF, 0)

        def T_BYTE(self):
            return self.getToken(RiscVParser.T_BYTE, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(RiscVParser.COMA)
            else:
                return self.getToken(RiscVParser.COMA, i)

        def NUMERO_FP(self, i:int=None):
            if i is None:
                return self.getTokens(RiscVParser.NUMERO_FP)
            else:
                return self.getToken(RiscVParser.NUMERO_FP, i)

        def T_FLOAT(self):
            return self.getToken(RiscVParser.T_FLOAT, 0)

        def T_DOUBLE(self):
            return self.getToken(RiscVParser.T_DOUBLE, 0)

        def CADENA(self, i:int=None):
            if i is None:
                return self.getTokens(RiscVParser.CADENA)
            else:
                return self.getToken(RiscVParser.CADENA, i)

        def T_ASCII(self):
            return self.getToken(RiscVParser.T_ASCII, 0)

        def T_ASCIIZ(self):
            return self.getToken(RiscVParser.T_ASCIIZ, 0)

        def getRuleIndex(self):
            return RiscVParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)




    def declaracion(self):
